# django-multiurl

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  README.md  README.rst  __about__.py  multiurl.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tests.py  tox.ini
.github/workflows/: publish.yml
multiurl/: __init__.py  multiurl.py  resolvers.py
requirements/: test.txt
tests/: settings.py  tests.py
