[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-multiurl"
dynamic = ["version"]
description = "Allow multiple views to match the same URL."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Robert Roskam", email = "raiderrobert@gmail.com" },
]
keywords = [
    "django",
    "urls",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
]
dependencies = [
    "django>=1.11",
]

[project.urls]
Homepage = "https://github.com/raiderrobert/django-multiurl"

[tool.hatch.version]
path = "__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/django_multiurl",
]
